error.txt
    Checking MazeApi v0.1.0 (/home/evaporator/workspace/Rust/MazeApi)
warning: unused import: `Extension`
  --> src/main.rs:10:5
   |
10 |     Extension, Router, extract::Query, http::StatusCode, response::IntoResponse, routing::get,
   |     ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no function or associated item named `new` found for struct `WebPEncoder<W>` in the current scope
   --> src/main.rs:166:40
    |
166 |             let encoder = WebPEncoder::new(&mut buffer);
    |                                        ^^^ function or associated item not found in `WebPEncoder<_>`
    |
note: if you're trying to build a new `WebPEncoder<_>`, consider using `WebPEncoder::<W>::new_lossless` which returns `WebPEncoder<_>`
   --> /home/evaporator/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/image-0.25.10/src/codecs/webp/encoder.rs:34:5
    |
 34 |     pub fn new_lossless(w: W) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Vec<u8>: Seek` is not satisfied
   --> src/main.rs:182:49
    |
182 |             let encoder = TiffEncoder::new(&mut buffer);
    |                           ----------------      ^^^^^^ the trait `Seek` is not implemented for `Vec<u8>`
    |                           |
    |                           required by a bound introduced by this call
    |
    = note: required for `&mut Vec<u8>` to implement `Seek`
note: required by a bound in `TiffEncoder::<W>::new`
   --> /home/evaporator/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/image-0.25.10/src/codecs/tiff.rs:515:17
    |
515 | impl<W: Write + Seek> TiffEncoder<W> {
    |                 ^^^^ required by this bound in `TiffEncoder::<W>::new`
516 |     /// Create a new encoder that writes its output to `w`
517 |     pub fn new(w: W) -> TiffEncoder<W> {
    |            --- required by a bound in this associated function

error[E0599]: the method `write_image` exists for struct `TiffEncoder<&mut Vec<u8>>`, but its trait bounds were not satisfied
   --> src/main.rs:184:18
    |
183 | /             encoder
184 | |                 .write_image(&img_bytes, width, height, colour_type)
    | |                 -^^^^^^^^^^^ method cannot be called on `TiffEncoder<&mut Vec<u8>>` due to unsatisfied trait bounds
    | |_________________|
    |
    |
   ::: /home/evaporator/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/image-0.25.10/src/codecs/tiff.rs:458:1
    |
458 |   pub struct TiffEncoder<W> {
    |   ------------------------- doesn't satisfy `TiffEncoder<&mut Vec<u8>>: ImageEncoder`
    |
    = note: the following trait bounds were not satisfied:
            `&mut Vec<u8>: Seek`
            which is required by `TiffEncoder<&mut Vec<u8>>: ImageEncoder`

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `MazeApi` (bin "MazeApi") generated 1 warning
error: could not compile `MazeApi` (bin "MazeApi") due to 3 previous errors; 1 warning emitted
